--- a/src/index.html
+++ b/src/index.html
@@ -3,15 +3,13 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Nick Nish - Developer &amp; Startup Boy</title>
-  <link rel="stylesheet" href="/public/bundle.css">
 </head>
 
 <body>
   <div id="app"></div>
-  <script src="/public/bundle.js"></script>
 </body>
 
 </html>
