--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="google-site-verification" content="ZsR7DBayXkYHUqgVqkePKJRLeQXzkri7m-s5CFZzMG4" />
   <title>Nick Nish - Developer &amp; Startup Boy</title>
 </head>
 
