Update meta description for better SEO

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="google-site-verification" content="ZsR7DBayXkYHUqgVqkePKJRLeQXzkri7m-s5CFZzMG4" />
+  <meta name="description" content="Nick Nish's Portfolio and Blog. Learn about life, love, and business as a millennial."
+  />
   <title>Nick Nish - Developer &amp; Startup Boy</title>
 </head>
 
