Add contact form to work with Netlify

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,13 @@
 
 <body>
   <div id="app"></div>
+
+  <!-- A little help for the Netlify post-processing bots -->
+  <form name="contact" class="u-visuallyHidden" netlify netlify-honeypot="bot-field" hidden>
+    <input type="text" name="name" />
+    <input type="email" name="email" />
+    <textarea name="message"></textarea>
+  </form>
 </body>
 
 </html>
