Replace @fontawesome packages with WebFonts to improve performance

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,8 @@
   <meta name="description" content="Nick Nish's Portfolio and Blog. Learn about life, love, and business as a millennial."
   />
   <title>Nick Nish - Developer &amp; Startup Boy</title>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp"
+    crossorigin="anonymous">
 </head>
 
 <body>
